// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Label /> is rendered without errors and with "*" when data.required is true 1`] = `
<DocumentFragment>
  <label
    class="label "
    for="test-select-component-main-button"
    id="test-select-component-label"
  >
    This is the label
    <span
      class="indicator"
    >
      *
    </span>
  </label>
</DocumentFragment>
`;

exports[`<Label /> is rendered without errors and without "*" when data.required is false 1`] = `
<DocumentFragment>
  <label
    class="label "
    for="test-select-component-main-button"
    id="test-select-component-label"
  >
    This is the label
  </label>
</DocumentFragment>
`;
